<resources>
    <string name="app_name">Weather Forecast App</string>
    <string name="every_day">Every day</string>
    <string name="ask_location_permission">Let this app access your location to find fetch weather information</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Windy</string>
    <string name="precipitation">Precipitation</string>
    <string name="enable_location">ENABLE LOCATION</string>
    <string name="search">Search</string>
    <string name="searchHint">Search city</string>
    <string name="favourite">Favourite</string>
    <string name="temperature">%s°</string>
    <string name="dateTimeString">Today, %s %s</string>
    <string name="insertSuccess">%s added to favourites</string>
    <string name="insertFail">Couldn\'t add to favourites.</string>
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="deleteSuccess">%s removed from favourites</string>
    <string name="deleteFail">Couldn\'t remove from favourites.</string>
    <string name="invalid_search_query">Please enter valid location</string>
    <string name="favourite_locations_title">Favourite Locations</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip_for_now">Skip for now</string>
    <string name="turn_on_location">Turn on location</string>
    <string name="temp_min_max">%s° / %s°</string>
    <string name="no_data_found">No data found</string>
    <string name="search_again">We couldn\'t find what you searched for. Try searching again.</string>
    <string name="no_favourites">No favourites yet.</string>
    <string name="humidity_value">%s%%</string>
    <string name="precipitation_value">%s%%</string>
    <string name="windspeed_value">%s km/h</string>
    <string name="permission_alert_builder_title">Location Permission Required</string>
    <string name="permission_alert_builder_message">To provide accurate weather information, we need your location.</string>
    <string name="permission_alert_builder_positive">Open Settings</string>
    <string name="permission_alert_builder_negative">Cancel</string>
    <string name="no_gps_builder_message">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="empty_parameter">-</string>
    <string name="delete_confirmation">Are you sure you want to delete it?</string>
    <string name="alert_builder_positive_response">Yes</string>
    <string name="alert_builder_negative_response">Yes</string>
    <string name="no_internet_connection">No internet connection</string>
</resources>