<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.WeatherFragment">
    <View
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/card_guideline_70"
        android:background="@color/sky_blue"/>

    <TextView
        android:id="@+id/city_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="@dimen/dimen_27sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Malang, Indonesia" />

    <TextView
        android:id="@+id/timestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/city_name"
        tools:text="30 Sept 11:00 AM" />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="@dimen/dimen_180dp"
        android:layout_height="@dimen/dimen_180dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timestamp"
        tools:src="@drawable/ic_weather" />

    <TextView
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_85sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icon"
        tools:text="20\u00b0" />

    <TextView
        android:id="@+id/weather_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/temperature"
        tools:text="Cloudy" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/card_guideline_70"
        app:layout_constraintTop_toBottomOf="@id/weather_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.68"
        />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="@dimen/dimen_300dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/lighter_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/card_guideline_70"
        app:layout_constraintTop_toBottomOf="@id/card_guideline_70"
        app:strokeWidth="@dimen/dimen_0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:paddingTop="@dimen/dimen_7dp"
            android:paddingBottom="@dimen/dimen_7dp">

            <ImageView
                android:id="@+id/ic_humidity"
                android:layout_width="@dimen/dimen_50dp"
                android:layout_height="@dimen/dimen_50dp"
                android:src="@drawable/ic_humidity"
                app:layout_constraintEnd_toEndOf="@id/card_first_guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/card_first_guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ic_humidity" />

            <TextView
                android:id="@+id/tv_humidity_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="@dimen/dimen_18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/card_first_guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_humidity"
                tools:text="30%" />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/card_first_guideline"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.33" />

            <ImageView
                android:id="@+id/ic_precipitation"
                android:layout_width="@dimen/dimen_50dp"
                android:layout_height="@dimen/dimen_50dp"
                android:src="@drawable/ic_precipitation"
                app:layout_constraintEnd_toEndOf="@id/card_second_guideline"
                app:layout_constraintStart_toStartOf="@id/card_first_guideline"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_precipitation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/precipitation"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/card_second_guideline"
                app:layout_constraintStart_toStartOf="@id/card_first_guideline"
                app:layout_constraintTop_toBottomOf="@id/ic_precipitation" />

            <TextView
                android:id="@+id/tv_precipitation_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="@dimen/dimen_18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/card_second_guideline"
                app:layout_constraintStart_toStartOf="@id/card_first_guideline"
                app:layout_constraintTop_toBottomOf="@id/tv_precipitation"
                tools:text="10%" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/card_second_guideline"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.66" />

            <ImageView
                android:id="@+id/ic_wind"
                android:layout_width="@dimen/dimen_50dp"
                android:layout_height="@dimen/dimen_50dp"
                android:src="@drawable/ic_windy"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/card_second_guideline"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_wind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/card_second_guideline"
                app:layout_constraintTop_toBottomOf="@id/ic_wind" />

            <TextView
                android:id="@+id/tv_wind_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="@dimen/dimen_18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/card_second_guideline"
                app:layout_constraintTop_toBottomOf="@id/tv_wind"
                tools:text="18 km/h" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>