<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_weather_details"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="wrap_content"
                android:background="@color/sky_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/progress_bar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:lottie_autoPlay="true"
                    app:lottie_rawRes="@raw/loader" />

                <TextView
                    android:id="@+id/tv_no_data_found"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_20dp"
                    android:text="@string/no_data_found"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dimen_30sp"
                    android:textStyle="bold"
                    android:visibility="gone"
                    app:layout_constraintBottom_toTopOf="@id/iv_no_data_found"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageView
                    android:id="@+id/iv_no_data_found"
                    android:layout_width="@dimen/dimen_200dp"
                    android:layout_height="@dimen/dimen_200dp"
                    android:src="@drawable/ic_no_data_found"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_search_again"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_20dp"
                    android:text="@string/search_again"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dimen_20sp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_no_data_found" />


                <TextView
                    android:id="@+id/location_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:fontFamily="@font/lato_bold"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dimen_27sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Malang, Indonesia" />

                <TextView
                    android:id="@+id/datetime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:fontFamily="@font/lato_regular"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dimen_18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/location_address"
                    tools:text="30 Sept 11:00 AM" />

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="@dimen/dimen_200dp"
                    android:layout_height="@dimen/dimen_200dp"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    app:layout_constraintBottom_toTopOf="@id/temperature"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/datetime"
                    tools:src="@drawable/ic_weather" />

                <TextView
                    android:id="@+id/temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dimen_85sp"
                    app:layout_constraintBottom_toTopOf="@id/weather_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/icon"
                    tools:text="20\u00b0" />

                <TextView
                    android:id="@+id/weather_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_80dp"
                    android:fontFamily="@font/lato_regular"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dimen_25sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/temperature"
                    tools:text="Cloudy" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/card_guideline_70"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.68"
                    app:layout_constraintTop_toBottomOf="@id/weather_title" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/parameters_card"
                android:layout_width="@dimen/dimen_300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="-40dp"
                app:cardBackgroundColor="@color/lighter_blue"
                app:cardCornerRadius="@dimen/dimen_20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_weather_details"
                app:strokeWidth="@dimen/dimen_0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:paddingTop="@dimen/dimen_7dp"
                    android:paddingBottom="@dimen/dimen_7dp">

                    <ImageView
                        android:id="@+id/ic_humidity"
                        android:layout_width="@dimen/dimen_30dp"
                        android:layout_height="@dimen/dimen_30dp"
                        android:src="@drawable/ic_humidity"
                        app:layout_constraintEnd_toEndOf="@id/card_first_guideline"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_humidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato_bold"
                        android:text="@string/humidity"
                        android:textSize="@dimen/dimen_13sp"
                        app:layout_constraintEnd_toEndOf="@id/card_first_guideline"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/ic_humidity" />

                    <TextView
                        android:id="@+id/tv_humidity_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato_bold"
                        android:textAlignment="center"
                        android:textSize="@dimen/dimen_17sp"
                        app:layout_constraintEnd_toEndOf="@id/card_first_guideline"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_humidity"
                        tools:text="30%" />


                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/card_first_guideline"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.33" />

                    <ImageView
                        android:id="@+id/ic_precipitation"
                        android:layout_width="@dimen/dimen_30dp"
                        android:layout_height="@dimen/dimen_30dp"
                        android:src="@drawable/ic_precipitation"
                        app:layout_constraintEnd_toEndOf="@id/card_second_guideline"
                        app:layout_constraintStart_toStartOf="@id/card_first_guideline"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_precipitation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato_bold"
                        android:text="@string/precipitation"
                        android:textSize="@dimen/dimen_13sp"
                        app:layout_constraintEnd_toEndOf="@id/card_second_guideline"
                        app:layout_constraintStart_toStartOf="@id/card_first_guideline"
                        app:layout_constraintTop_toBottomOf="@id/ic_precipitation" />

                    <TextView
                        android:id="@+id/tv_precipitation_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato_bold"
                        android:textAlignment="center"
                        android:textSize="@dimen/dimen_17sp"
                        app:layout_constraintEnd_toEndOf="@id/card_second_guideline"
                        app:layout_constraintStart_toStartOf="@id/card_first_guideline"
                        app:layout_constraintTop_toBottomOf="@id/tv_precipitation"
                        tools:text="10%" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/card_second_guideline"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.66" />

                    <ImageView
                        android:id="@+id/ic_wind"
                        android:layout_width="@dimen/dimen_30dp"
                        android:layout_height="@dimen/dimen_30dp"
                        android:src="@drawable/ic_windy"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@id/card_second_guideline"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_wind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato_bold"
                        android:text="@string/wind"
                        android:textSize="@dimen/dimen_13sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@id/card_second_guideline"
                        app:layout_constraintTop_toBottomOf="@id/ic_wind" />

                    <TextView
                        android:id="@+id/tv_wind_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato_bold"
                        android:textAlignment="center"
                        android:textSize="@dimen/dimen_17sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@id/card_second_guideline"
                        app:layout_constraintTop_toBottomOf="@id/tv_wind"
                        tools:text="18 km/h" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_weather_forecast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/dimen_20dp"
                android:paddingBottom="@dimen/dimen_10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/parameters_card"
                tools:itemCount="3"
                tools:listitem="@layout/weather_forecast_card" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer_forecast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/dimen_20dp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/parameters_card">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <include layout="@layout/shimmer_weather_forecast_layout" />

                    <include layout="@layout/shimmer_weather_forecast_layout" />

                    <include layout="@layout/shimmer_weather_forecast_layout" />

                    <include layout="@layout/shimmer_weather_forecast_layout" />
                </LinearLayout>

            </com.facebook.shimmer.ShimmerFrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_my_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimen_15dp"
        android:layout_marginBottom="@dimen/dimen_7dp"
        android:backgroundTint="@color/sky_blue"
        android:text="My location"
        app:layout_constraintBottom_toTopOf="@id/btn_favourite_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_location"
        app:tint="@color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_favourite_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimen_15dp"
        android:layout_marginBottom="@dimen/dimen_20dp"
        android:backgroundTint="@color/sky_blue"
        android:text="Add to favourites"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_favourite_hollow"
        app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>